normalizing s-expression-features

--- a/!part2_grammar_generation.ipynb
+++ b/!part2_grammar_generation.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -27,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -51,10 +49,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# checks if a note is formatted correctly and splits it into its component parts\n",
@@ -99,10 +95,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "chord_dictionary = {\n",
@@ -122,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +125,7 @@
        "{'A7', 'C7', 'D6', 'Dj7', 'E-7', 'Em7b5', 'F#-7', 'Fj7', 'Fo', 'G#m7b5', 'G-7'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,10 +137,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def find_chord_type(chord):    \n",
@@ -166,10 +158,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def find_chord_modifiers(chord, chord_type):\n",
@@ -197,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +196,7 @@
        "[11, 6]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,10 +217,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def find_slope_bounds(lst):\n",
@@ -253,10 +241,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def categorize_note(note, chord, modifiers=True, helpful=0.0):\n",
@@ -288,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +305,7 @@
        "'-11 0 C|0.400|0.250 L|0.700|0.100'"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,10 +327,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [],
    "source": [
     "len = len # :P"
@@ -360,10 +344,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [],
    "source": [
     "loc_first = lambda notes: notes[0][1] % 1"
@@ -379,10 +361,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [],
    "source": [
     "tot_rests = lambda notes: 1 - sum([note[1] for note in notes])"
@@ -398,10 +378,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def slope_process(notes):\n",
@@ -447,10 +425,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def consonance(s_exp):\n",
@@ -477,10 +453,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def featurize(args):\n",
@@ -503,10 +477,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def process_solo(filename, s_exp, features):\n",
@@ -543,10 +515,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 29,
+   "metadata": {},
    "outputs": [],
    "source": [
     "start_directory = 'midi_to_csv'\n",
@@ -557,10 +527,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 30,
+   "metadata": {},
    "outputs": [],
    "source": [
     "catcount = {'C': 0, 'L': 0, 'H': 0, 'A': 0, 'X': 0}"
@@ -568,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +560,7 @@
        "{'A': 21, 'C': 174, 'H': 0, 'L': 80, 'X': 100}"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,10 +571,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 33,
+   "metadata": {},
    "outputs": [],
    "source": [
     "b = {'A': 63, 'C': 174, 'H': 0, 'L': 80, 'X': 58}"
@@ -614,10 +580,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 34,
+   "metadata": {},
    "outputs": [],
    "source": [
     "a = {'A': 116, 'C': 170, 'H': 0, 'L': 84, 'X': 5}"
@@ -625,24 +589,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -669,7 +633,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-3 0 X|0.036|0.174 A|0.255|0.164 C|0.443|0.195...</td>\n",
+       "      <td>-3 0 X|0.036|0.174 X|0.255|0.164 C|0.443|0.195...</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
@@ -681,7 +645,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>-3 7 A|0.171|0.073 C|0.263|0.130 A|0.408|0.185...</td>\n",
+       "      <td>-3 7 A|0.171|0.073 C|0.263|0.130 X|0.408|0.185...</td>\n",
        "      <td>0</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
@@ -693,12 +657,12 @@
        "                                                 exp song_id song_index\n",
        "0                    0 4 X|0.125|0.155 X|0.290|0.725       0          0\n",
        "1                                  0 0 L|0.678|0.340       0          1\n",
-       "2  -3 0 X|0.036|0.174 A|0.255|0.164 C|0.443|0.195...       0          2\n",
+       "2  -3 0 X|0.036|0.174 X|0.255|0.164 C|0.443|0.195...       0          2\n",
        "3                                  0 0 C|0.004|0.243       0          3\n",
-       "4  -3 7 A|0.171|0.073 C|0.263|0.130 A|0.408|0.185...       0          4"
+       "4  -3 7 A|0.171|0.073 C|0.263|0.130 X|0.408|0.185...       0          4"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,24 +673,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -749,7 +713,7 @@
        "      <td>0.584635</td>\n",
        "      <td>4.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.3520</td>\n",
+       "      <td>0.0880</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -767,7 +731,7 @@
        "      <td>-11.315104</td>\n",
        "      <td>1.5</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.5164</td>\n",
+       "      <td>0.3913</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -785,7 +749,7 @@
        "      <td>-31.157552</td>\n",
        "      <td>4.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>0.6173</td>\n",
+       "      <td>0.5759</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -793,14 +757,14 @@
       ],
       "text/plain": [
        "     0         1          2    3    4       5\n",
-       "0  2.0  0.125000   0.584635  4.0  0.0  0.3520\n",
+       "0  2.0  0.125000   0.584635  4.0  0.0  0.0880\n",
        "1  1.0  0.678385  -0.678385  0.0  0.0  0.1360\n",
-       "2  5.0  0.036458 -11.315104  1.5  1.0  0.5164\n",
+       "2  5.0  0.036458 -11.315104  1.5  1.0  0.3913\n",
        "3  1.0  0.003906  -2.003906  0.0  0.0  0.1944\n",
-       "4  7.0  0.170573 -31.157552  4.0  2.0  0.6173"
+       "4  7.0  0.170573 -31.157552  4.0  2.0  0.5759"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,10 +775,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 37,
+   "metadata": {},
    "outputs": [],
    "source": [
     "s_exp.to_csv('%s/s_exp.csv'%end_directory)\n",
