--- a/!part3_modeling.ipynb
+++ b/!part3_modeling.ipynb
@@ -2,13 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.cluster import KMeans\n",
+    "from sklearn import preprocessing\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import random, re"
@@ -25,10 +24,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
     "labels_path = 'test_files/s_exp.csv'\n",
@@ -37,24 +34,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -93,7 +90,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>-3 7 X|0.171|0.073 C|0.263|0.130 X|0.408|0.185...</td>\n",
+       "      <td>-3 7 A|0.171|0.073 C|0.263|0.130 X|0.408|0.185...</td>\n",
        "      <td>0</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
@@ -107,10 +104,10 @@
        "1                                  0 0 L|0.678|0.340        0           1\n",
        "2  -3 0 X|0.036|0.174 X|0.255|0.164 C|0.443|0.195...        0           2\n",
        "3                                  0 0 C|0.004|0.243        0           3\n",
-       "4  -3 7 X|0.171|0.073 C|0.263|0.130 X|0.408|0.185...        0           4"
+       "4  -3 7 A|0.171|0.073 C|0.263|0.130 X|0.408|0.185...        0           4"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,24 +119,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -198,7 +195,7 @@
        "      <td>-31.157552</td>\n",
        "      <td>4.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>0.5540</td>\n",
+       "      <td>0.5759</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -210,10 +207,10 @@
        "1  1.0  0.678385  -0.678385  0.0  0.0  0.1360\n",
        "2  5.0  0.036458 -11.315104  1.5  1.0  0.3913\n",
        "3  1.0  0.003906  -2.003906  0.0  0.0  0.1944\n",
-       "4  7.0  0.170573 -31.157552  4.0  2.0  0.5540"
+       "4  7.0  0.170573 -31.157552  4.0  2.0  0.5759"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,10 +229,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [],
    "source": [
     "notes = ['C', 'Db', 'D', 'Eb', 'E', 'F', 'Gb', 'G', 'Ab', 'A', 'Bb', 'B']\n",
@@ -310,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +314,7 @@
        "23"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,36 +327,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_kmeans_clusters(s_exp_features):\n",
-    "    kmeans = KMeans(n_clusters=k_size).fit(s_exp_features)\n",
+    "    features_scaled = preprocessing.scale(s_e)\n",
+    "    kmeans = KMeans(n_clusters=k_size).fit(features_scaled)\n",
     "    return kmeans.labels_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([ 3,  3, 21,  3, 10, 21, 21, 10,  5, 21, 19,  5, 21, 10,  5, 10,  8,\n",
-       "        9, 10,  5, 20,  8,  9, 19,  0,  0, 12,  9, 15,  0, 10,  9, 17, 10,\n",
-       "       22, 12, 22, 20, 17, 18, 10, 12,  6,  9,  6,  5, 17, 13, 22,  5,  8,\n",
-       "        7,  2,  2,  6,  2, 20, 14, 14, 15,  7,  7,  0, 12,  1, 19, 14, 13,\n",
-       "       19, 16,  6,  6, 11,  1,  6, 17, 19,  1, 17, 19,  7, 12,  8, 12, 16,\n",
-       "       16, 16,  2,  2,  2,  9,  4])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'X_train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-27-6d67d850fb86>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mget_kmeans_clusters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms_exp_features\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-26-a32cb3e9e27f>\u001b[0m in \u001b[0;36mget_kmeans_clusters\u001b[0;34m(s_exp_features)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mget_kmeans_clusters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms_exp_features\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mfeatures_scaled\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpreprocessing\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscale\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mkmeans\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mKMeans\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_clusters\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mk_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeatures_scaled\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mkmeans\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlabels_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'X_train' is not defined"
+     ]
     }
    ],
    "source": [
@@ -378,10 +369,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Node:\n",
@@ -396,10 +385,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def generate_nodes(labels):\n",
@@ -421,10 +408,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def generate_cpt(node_objects):\n",
@@ -452,10 +437,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def select_from_weighted_dct(dct):\n",
@@ -469,10 +452,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def sequence_s_expressions(n, node_objects):\n",
@@ -496,10 +477,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_notes_from_category(chord, category):\n",
@@ -519,10 +498,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def select_note(lst, curr, min_s, max_s): # maybe split into two functions?\n",
@@ -550,10 +527,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def produce_notes(num_measures, list_of_chords, node_objects): #length of chords list = num of measures\n",
@@ -584,24 +559,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -617,96 +592,54 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Bb3</td>\n",
-       "      <td>0.148</td>\n",
-       "      <td>0.066</td>\n",
+       "      <td>0.667</td>\n",
+       "      <td>0.092</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>A3</td>\n",
-       "      <td>0.228</td>\n",
-       "      <td>0.151</td>\n",
+       "      <td>D4</td>\n",
+       "      <td>0.770</td>\n",
+       "      <td>0.143</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Bb3</td>\n",
-       "      <td>0.398</td>\n",
-       "      <td>0.057</td>\n",
+       "      <td>F4</td>\n",
+       "      <td>0.922</td>\n",
+       "      <td>0.212</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>C4</td>\n",
-       "      <td>0.456</td>\n",
-       "      <td>0.145</td>\n",
+       "      <td>D4</td>\n",
+       "      <td>1.478</td>\n",
+       "      <td>0.234</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>D4</td>\n",
-       "      <td>0.618</td>\n",
-       "      <td>0.169</td>\n",
+       "      <td>1.738</td>\n",
+       "      <td>0.201</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>B3</td>\n",
-       "      <td>0.849</td>\n",
-       "      <td>0.247</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>C4</td>\n",
-       "      <td>1.073</td>\n",
-       "      <td>0.171</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Gb4</td>\n",
-       "      <td>1.270</td>\n",
-       "      <td>0.060</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Db4</td>\n",
-       "      <td>1.353</td>\n",
-       "      <td>0.159</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>C4</td>\n",
-       "      <td>1.525</td>\n",
-       "      <td>0.066</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
        "      <td>D4</td>\n",
-       "      <td>1.607</td>\n",
-       "      <td>0.173</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>D4</td>\n",
-       "      <td>1.793</td>\n",
-       "      <td>0.087</td>\n",
+       "      <td>1.966</td>\n",
+       "      <td>0.576</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   note_name  start_time duration\n",
-       "0        Bb3       0.148    0.066\n",
-       "1         A3       0.228    0.151\n",
-       "2        Bb3       0.398    0.057\n",
-       "3         C4       0.456    0.145\n",
-       "4         D4       0.618    0.169\n",
-       "5         B3       0.849    0.247\n",
-       "6         C4       1.073    0.171\n",
-       "7        Gb4       1.270    0.060\n",
-       "8        Db4       1.353    0.159\n",
-       "9         C4       1.525    0.066\n",
-       "10        D4       1.607    0.173\n",
-       "11        D4       1.793    0.087"
+       "  note_name  start_time duration\n",
+       "0       Bb3       0.667    0.092\n",
+       "1        D4       0.770    0.143\n",
+       "2        F4       0.922    0.212\n",
+       "3        D4       1.478    0.234\n",
+       "4        D4       1.738    0.201\n",
+       "5        D4       1.966    0.576"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
